fix task checkbox alignment.
I think this is the only place we still use .small_icon_button.

Otherwise this might change things i did not mean to.

--- a/app/stylesheets/ui/icons.scss
+++ b/app/stylesheets/ui/icons.scss
@@ -171,7 +171,7 @@
 a.small_icon_button {
   height: 16px;
   width: 16px;
-  display: block;
+  display: inline-block;
   padding: 0;
   background-repeat: no-repeat;
   background-position: 0 0;
